# tinybvh-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
ffi/include/: tinybvh.h
ffi/src/: tinybvh.cpp
src/: cxx_ffi.rs  errors.rs  ffi.rs  lib.rs  node.rs  ray.rs  traversal.rs
src/layouts/: bvh4.rs  cwbvh.rs  mbvh.rs  mod.rs  verbose.rs  wald.rs
tests/: tests.rs
