[package]
name = "tinybvh-rs"
description = "Rust wrapper for tinybvh"
repository = "https://github.com/DavidPeicho/tinybvh-rs"
version = "0.1.0-beta.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["graphics", "rendering", "tinybvh", "bvh"]

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
approx = "0.5.1"
